--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "com.unity.2d.path",
-  "version": "2.0.4",
+  "version": "2.0.5",
   "unity": "2019.3",
   "unityRelease": "0a10",
   "displayName": "2D Path",
@@ -11,11 +11,14 @@
     "path"
   ],
   "relatedPackages": {
-    "com.unity.2d.path.tests": "2.0.4"
+    "com.unity.2d.path.tests": "2.0.5"
+  },
+  "upmCi": {
+    "footprint": "c5348cbecffe00ba7c51c010433c155fb49d729e"
   },
   "repository": {
+    "url": "https://github.cds.internal.unity3d.com/unity/2d.git",
     "type": "git",
-    "url": "git@github.cds.internal.unity3d.com:unity/2d.git",
-    "revision": "4bce32315ec7f4b81b7a65d5d7e4bec62760b391"
+    "revision": "c248ba808bc875557a2f958dcb6076c4acaa7b56"
   }
 }
