--- a/Tests/Unity.2D.Path.Tests.asmdef
+++ b/Tests/Unity.2D.Path.Tests.asmdef
@@ -1,10 +1,6 @@
 {
     "name": "Unity.2D.Path.Tests",
     "references": [
-        "Unity.2D.Path.Editor"
-    ],
-	"optionalUnityReferences": [
-        "TestAssemblies"
     ],
     "includePlatforms": [
         "Editor"
@@ -12,8 +8,13 @@
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": true,
-    "precompiledReferences": [],
+    "precompiledReferences": [
+        "nunit.framework.dll"
+    ],
     "autoReferenced": false,
-    "defineConstraints": [],
-    "versionDefines": []
+    "defineConstraints": [
+        "UNITY_INCLUDE_TESTS"
+    ],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
