com.unity.2d.path@5.0.0 ## [5.0.0] - 2021-03-17 ### Changed - Update version for release

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "com.unity.2d.path",
-  "version": "5.0.0-pre.2",
+  "version": "5.0.0",
   "unity": "2021.1",
   "displayName": "2D Path",
   "description": "2D Path provides tooling to edit shapes (polygons and Bézier splines) in EditorWindows and the SceneView.",
@@ -10,14 +10,14 @@
     "path"
   ],
   "relatedPackages": {
-    "com.unity.2d.path.tests": "5.0.0-pre.2"
+    "com.unity.2d.path.tests": "5.0.0"
   },
   "upmCi": {
-    "footprint": "de3a4f9e213a3a0a209a487b9642d0d349a2d7cd"
+    "footprint": "d1ccb04dbe5b9cc41426f021c1e6d896c1b657cf"
   },
   "repository": {
     "url": "https://github.cds.internal.unity3d.com/unity/2d.git",
     "type": "git",
-    "revision": "4ed7487d2d09e34d26a4d99858de47575531e5a9"
+    "revision": "82ee1598c2f1270bc1081c1f908364e528335bd5"
   }
 }
